--- a/README.mkd
+++ b/README.mkd
@@ -4,6 +4,12 @@ Vim Configuration
 *ATTENTION: Use at your own risk! Tested with Vim 7.2 and newer.*
 
 
+Requirements
+------------
+
+Some of the installed plugins require ruby to be installed and available in your $PATH.
+
+
 Installation
 ------------
 
