--- a/README.mkd
+++ b/README.mkd
@@ -20,8 +20,13 @@ Installation
         mv .vimrc .vimrc_backup
         git clone git://github.com/tipclapper/vim.git .vim
 
-2. Create a symlink to the vimrc file in the .vim folder.
+2. Initialize git submodules
+
+        cd ~/.vim
+        git submodule update --init
+
+3. Create a symlink to the vimrc file in the .vim folder.
 
         ln -fs ~/.vim/vimrc ~/.vimrc
 
-3. Restart (G)Vim.
+4. Restart (G)Vim.
