--- a/README.mkd
+++ b/README.mkd
@@ -18,7 +18,7 @@ Installation
         cd ~
         mv .vim .vim_backup
         mv .vimrc .vimrc_backup
-        git clone git://github.com/tipclapper/vim.git .vim
+        git clone git://github.com/tipclapper/Vim.git .vim
 
 2. Initialize git submodules.
 
